Revision history for Module::Provision::TraitFor::Debian

          - First working copy

0.1.1     2015-01-02 00:24:58
          - Added project files to master branch
