@@ -37,24 +37,35 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Provision-TraitFor-Debian
 bugtracker.mailto = bug-Module-Provision-TraitFor-Debian@rt.cpan.org
-;repository.url   = git://github.com/pjfl/p5-module-provision-traitfor-debian.git
-;repository.web   = http://github.com/pjfl/p5-module-provision-traitfor-debian
-;repository.type  = git
+repository.url    = git://github.com/pjfl/p5-module-provision-traitfor-debian.git
+repository.web    = http://github.com/pjfl/p5-module-provision-traitfor-debian
+repository.type   = git
 
-;[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
-;filename         = README.md
-;location         = root
-;type             = markdown
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
