@@ -2,13 +2,13 @@ package Module::Provision::TraitFor::Debian;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 3 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 4 $ =~ /\d+/gmx );
 
 use Class::Usul::Constants  qw( EXCEPTION_CLASS NUL OK PREFIX SPC TRUE );
 use Class::Usul::File;
 use Class::Usul::Functions  qw( ensure_class_loaded io
                                 is_arrayref squeeze throw trim );
-use Class::Usul::Types      qw( HashRef NonEmptySimpleStr Object );
+use Class::Usul::Types      qw( HashRef NonEmptySimpleStr Object PositiveInt );
 use Debian::Control;
 use Debian::Control::Stanza::Binary;
 use Debian::Dependency;
@@ -47,7 +47,7 @@ has 'install_base' => is => 'lazy', isa => Path, coerce => TRUE,
 has 'path_prefix'  => is => 'lazy', isa => Path, coerce => TRUE,
    builder         => sub { $_[ 0 ]->debconfig->{path_prefix} // PREFIX };
 
-has 'phase'        => is => 'lazy', isa => NonEmptySimpleStr,
+has 'phase'        => is => 'lazy', isa => PositiveInt,
    builder         => sub { $_[ 0 ]->debconfig->{phase} // '1' };
 
 has 'short_ver'    => is => 'lazy', isa => NonEmptySimpleStr, builder => sub {
@@ -432,11 +432,59 @@ Module::Provision::TraitFor::Debian - Build a Debian installable archive of an a
 
 =head1 Description
 
+Build a Debian installable archive of an application
+
 =head1 Configuration and Environment
 
 Defines the following attributes;
 
 =over 3
+
+=item C<ctrldir>
+
+Path to the directory containing the meta data file F<META.json>. Defaults to
+F<var/etc> relative to the application root directory
+
+=item C<debconf_path>
+
+Path to the file containing application specific Debian meta data. Defaults
+to F<.provision.json> in the application root directory
+
+=item C<debconfig>
+
+A hash reference load from the contents of L</debconf_path>. The hash reference
+will be empty if the file does not exist
+
+=item C<dh_share_dir>
+
+Path to the C<DhMakePerl> shared distribution directory
+
+=item C<dh_ver>
+
+The Debian helper version number. A non empty simple string which defaults to
+C<7>. The value from the L</debconfig> hash reference will be used in
+preference if it exists
+
+=item C<install_base>
+
+Path where the application will be installed. Constructed from L</path_prefix>,
+C<distname>, L</short_ver>, and L</phase>, e.g. F</opt/distname/v1.0p1>
+
+=item C<path_prefix>
+
+Path to default installation directory prefix which default to
+F</opt>. The value from the L</debconfig> hash reference will be used in
+preference if it exists
+
+=item C<phase>
+
+A positive integer that default to C<1>. The phase number indicates the
+purpose of the installation, e.g. 1 = live, 2 = testing, 3 = development
+
+=item C<short_ver>
+
+A non empty simple string which defaults to the distributions major and
+minor version numbers
 
 =back
 
@@ -444,13 +492,37 @@ Defines the following attributes;
 
 =head2 build - Build a Debian installable archive of an application
 
+Install L<local::lib>. Installs the applications dependencies into said local
+library. Creates a profile setting up the environment to use the local lib
+and then create a Debian package of the whole lot
+
 =head1 Diagnostics
+
+None
 
 =head1 Dependencies
 
 =over 3
 
 =item L<Class::Usul>
+
+=item L<Debian::Control>
+
+=item L<Debian::Dependency>
+
+=item L<Debian::Rules>
+
+=item L<Email::Date::Format>
+
+=item L<File::DataClass>
+
+=item L<File::ShareDir>
+
+=item L<Text::Format>
+
+=item L<Unexpected>
+
+=item L<Moo>
 
 =back
 
