@@ -1,5 +1,6 @@
 Revision history for Module::Provision::TraitFor::Debian
 
+          - Added public repository
           - First working copy
 
 0.1.1     2015-01-02 00:24:58
